修改CMakeLists.txt,这样以后添加c文件不用修改CMakeLists.txt,以及再次执行cmake生成makefile

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 PROJECT(HELLO)
-SET(SRC_LIST assert_test.c minicmockery.c)
+AUX_SOURCE_DIRECTORY(. SRC_LIST)
 add_definitions("-Wall -g")
 ADD_EXECUTABLE(hello ${SRC_LIST})
